@@ -1,5 +1,12 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. упрощена функция раскраски экрана
+	 а) код более понятный
+	 б) cross работает на всех темах (ранее на темных(черных) не работал)
+	 в) cross работает в truemode 
+
+#Revision: 1789
+	#Author: ctapmex Date: 2011-09-01 16:21:47 +0600 (Чт, 01 сен 2011)
 	1. упрощение в outliner в связи с переходом на новое api
 
 #Revision: 1788
